# better-ed-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
prisma/: prisma_partial_types.py  schema.prisma
prisma/migrations/20230324214945_db_init/: migration.sql
scripts/: entrypoint.sh
src/: app.py  dependencies.py  models.py
src/routers/: user.py
