[tool.poetry]
name = "better-ed-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
prisma = "^0.8.2"
firebase-admin = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
black = "^23.1.0"
isort = "^5.12.0"
taskipy = "^1.10.4"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-bugbear = "^23.3.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
